<resources>
    <string name="app_name">SimpleSMS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="to_head">To</string>
    <string name="from_head">From</string>
    <string name="message_head">Message</string>
    <string name="send_head">Send</string>
    <string name="response_head">Response</string>
    <string name="title_activity_settings">Settings</string>
    <string name="api_key_head">Nexmo Api Key</string>
    <string name="api_secret_head">Nexmo Api Secret</string>
    <string name="save_head">Save</string>
    <string name="restore_head">Restore</string>

</resources>
